fix(TextInput): correct spacing between input text and starting icon

--- a/packages/components/src/components/TextInput/styles/text.module.scss
+++ b/packages/components/src/components/TextInput/styles/text.module.scss
@@ -56,6 +56,19 @@
     &[data-status='error'] {
         border-color: var(--text-color-negative);
     }
+
+    // Remove text-indent and border-radius from input and placeholder when there's a left slot
+    &:has(.slot:not([data-name='right'])) {
+        .input {
+            text-indent: 0px;
+            border-start-start-radius: 0px;
+            border-end-start-radius: 0px;
+        }
+
+        .placeholder {
+            text-indent: 0px;
+        }
+    }
 }
 
 .input {
@@ -77,13 +90,6 @@
     &:-moz-focusring {
         outline: 2px solid transparent;
         outline-offset: 2px;
-    }
-
-    // Remove border-radius and text-indent/padding on the left if there's a left-side slot
-    &:has(~ div:not([data-name='right'])) {
-        text-indent: 0px;
-        border-start-start-radius: 0px;
-        border-end-start-radius: 0px;
     }
 
     // Remove border-radius and padding on the right if there's a right-side slot
